Code pour FireStation